footer being cut off fix

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -115,7 +115,6 @@
   align-items: center;
   font-size: 2rem;
   padding: 0;
-  margin-right: -20px;
 }
 
 /* --- Mobile Nav Dropdown --- */
